# homework-grading-automation

./: .env.example  .gitignore  LICENSE  README.md  git_autocheck.py  git_autocheck_fast.py  git_autocheck_webhook.py  gql-test-organization.py  gql-test.py  pyproject.toml
